# wwfridge

./: .gitignore  .gitmodules  README.md
backend/: CMakeLists.txt  FridgeDB.cpp  FridgeDB.h  FridgeDBHandlers.h  WebSocketIF.cpp  WebSocketIF.h  main.cpp
